[tool.poetry]
name = "passgen"
version = "1.0.0"
description = "A simple-as-hell password generator CLI."
authors = ["Dastan Ozgeldi <ozgdastan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
